--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-scripts",
-  "version": "1.1.4",
+  "name": "react-scripts-k-ramel",
+  "version": "0.0.2",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
@@ -21,6 +21,10 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "@k-ramel/driver-http": "^0.12.1",
+    "@k-ramel/react": "^0.12.0",
+    "@k-redux-router/core": "^0.3.0",
+    "@k-redux-router/react-k-ramel": "^0.3.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -43,14 +47,19 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "hoc-react-loader": "^6.3.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "k-ramel": "^0.12.1",
     "object-assign": "4.1.1",
+    "path-to-regexp": "^2.2.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.1",
+    "react-jss": "^8.5.0",
+    "recompose": "^0.27.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
