--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -11,7 +11,8 @@
     "url": "https://github.com/facebookincubator/create-react-app/issues"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "node ./bin/react-scripts.js start",
+    "lint": "node ./bin/react-scripts.js lint"
   },
   "files": [
     "bin",
@@ -44,10 +45,13 @@
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-babel": "5.1.0",
+    "eslint-plugin-cypress": "2.0.1",
     "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-import": "2.10.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
